[gd_scene load_steps=2 format=3 uid="uid://b4igwuaah3p7w"]

[ext_resource type="Script" uid="uid://htq1tbwderug" path="res://test4-otnup/hud.gd" id="1_2r1br"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2r1br")

[node name="MainMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -11.5
offset_right = 55.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Otnup"

[node name="HintMessage" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.647059, 0, 1)
autowrap_mode = 3
justification_flags = 171

[node name="NewGameButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -135.0
offset_right = 69.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
text = "Start new game"

[node name="NextCard" type="TextureRect" parent="."]
visible = false
offset_left = 391.0
offset_top = 15.0
offset_right = 431.0
offset_bottom = 55.0

[node name="NextCardLabel" type="Label" parent="."]
visible = false
offset_left = 274.0
offset_top = 15.0
offset_right = 350.0
offset_bottom = 38.0
text = "Next card"

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
